pygobject (3.7.91.1-1) UNRELEASED; urgency=low

  * New upstream release.
  * debian/python3-gi.lintian-overrides:
    - Also override dev-pkg-without-shlib-symlink for python3-gi.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 12 Mar 2013 12:25:56 +0100

pygobject (3.4.2-3) experimental; urgency=low

  [ Martin Pitt ]
  * debian/control.in: Make python-gi-dev Arch: any, as it now uses multiarch
    paths for the pkg-config file.
  * debian/control.in: Put transitional packages into section oldlibs, and
    priority extra. Thanks lintian.
  * debian/control.in: Fix non-bin-NMUable dependency of python-gobject-dev.
  * Add lintian overrides to suppress the package-name-doesnt-match-sonames
    warnings.
  * Add lintian override for "dbg-package-missing-depends python-gobject-dbg";
    this is a transitional package only.
  * Bump g-i build dependency to >= 1.34.2 to ensure the tests are working.
  * Add autopkgtests for the -dbg flavours of Python 2 and 3.
  * debian/control.in: Have python-gi-dev depend on python3-gi, too.
    (LP: #1101683)

  [ Josselin Mouette ]
  * Enable again gtk3 on m68k.
  * Add missing dependency python3-gi-cairo → python3-gi. (Closes: #673213)

  [ Michael Biebl ]
  * Stop using a doc symlink for the dbg package. The space savings are
    negligible and they are prone to cause problems. In case of
    python-gobject-dbg, which was converted to a transitional package, the
    symlink was mistakenly converted to a real directory which isn't handled
    nicely by dpkg. (Closes: #700779)
  * Use strict dependencies in python-gi-dev as the package is now
    Architecture: any
  * Tighten the dependency on python-gi-dev for python-gobject-dev.

 -- Michael Biebl <biebl@debian.org>  Thu, 21 Feb 2013 23:48:57 +0100

pygobject (3.4.2-2) experimental; urgency=low

  * Drop quilt (not necessary, we are using 3.0 (quilt) source format), and
    dh_autoreconf (we have no patches).