@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9),
                gnome-pkg-tools (>= 0.10),
                python-all-dev (>= 2.6.6-3~),
                python3-all-dev,
-               libglib2.0-dev (>= 2.31.0),
+               libglib2.0-dev (>= 2.34.2),
                libcairo2-dev,
                libffi-dev (>= 3.0.5),
                gobject-introspection (>= 1.34.2),
@@ -27,7 +27,7 @@ Build-Depends: debhelper (>= 9),
                python3-all-dbg,
                python-apt-dbg,
                python-cairo-dbg,
-               gir1.2-glib-2.0,
+               gir1.2-glib-2.0 (>= 1.34.2),
                gir1.2-gtk-3.0,
                gir1.2-freedesktop
 X-Python-Version: >= 2.7
@@ -42,7 +42,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python:Depends},
          ${shlibs:Depends},
          ${misc:Depends},
-         gir1.2-glib-2.0 (>= 1.31.0)
+         gir1.2-glib-2.0 (>= 1.34.2)
 Provides: ${python:Provides}
 Suggests: python-gi-cairo
 Breaks: python-gobject (<< 3.0.2-4),
@@ -63,7 +63,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python3:Depends},
          ${shlibs:Depends},
          ${misc:Depends},
-         gir1.2-glib-2.0 (>= 1.31.0)
+         gir1.2-glib-2.0 (>= 1.34.2)
 Conflicts: python3-gobject
 Provides: python3-gobject
 Replaces: python3-gobject
